fix z-index of footer

--- a/assets/style/single.scss
+++ b/assets/style/single.scss
@@ -50,6 +50,7 @@ aside {
     position: fixed;
     bottom: 0;
     min-width: 100%;
+    z-index: 999;
 }
 
 main .page {
